task-2 for table

--- a/task-2.html
+++ b/task-2.html
@@ -1,4 +1,4 @@
-<><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     >
     
     <caption style ="caption-side: top">
-        Time table of tudents lactures
+       <h1> Time table of tudents lactures </h1>
     </caption>
     
     <thead>
